[package]
name = "vitanchiki"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
clap = { version = "4.5.60", features = ["derive"] }
# tokio = "1.50.0"
# tokio-util = "0.7.18"
# futures = "0.3.32"
# serde = "1.0.228"
# serde_json = "1.0.149"
# serde_derive = "1.0.228"

[profile.release]
lto = true
codegen-units = 1
